--- a/index.css
+++ b/index.css
@@ -86,6 +86,7 @@ body {
 .header__runningline {
 	color: #ffffff;
 }
+
 /* ----------MAIN IMAGE CONTAINER -----*/
 .main__imageconteiner {
 	display: flex;
@@ -96,7 +97,7 @@ body {
 	width: 50vw;
 	height: 100%;
 	max-width: 683px;
-	max-height: 455.312px;
+	max-height: 460px;
 	-webkit-filter: blur(2px);
 	-moz-filter: blur(2px);
 	-o-filter: blur(2px);
@@ -152,17 +153,17 @@ body {
 	margin-top: 25px;
 }
 .products__fuel--img {
-	width: 100%;
-	height: 100%;
-	max-width: 100px;
-	max-height: 100px;
-	min-width: 93px;
+	width: 90px;
+	height: 90px;
+
 	border-radius: 50%;
 }
 .products__fuel--box {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+.products__fuel--box:not(:last-child) {
 	margin-left: 30px;
 }
 .products__towrap {
@@ -213,6 +214,10 @@ body {
 .ingredients .value {
 	order: 3;
 }
+.products__price {
+	text-decoration: underline;
+	font-size: 1.3rem;
+}
 
 /* ---------PRODUCTS TEXT---------- */
 
@@ -221,6 +226,9 @@ body {
 	margin-top: 65px;
 }
 .products__article-text {
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	border-radius: 20px;
+	padding: 10px;
 	font-size: 1.4rem;
 	line-height: 1.3;
 }
@@ -232,7 +240,7 @@ body {
 	background-color: black;
 }
 #bg-image {
-	background-image: url("images/footer.jpg");
+	background-image: url("images/footer.webp");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
