--- a/index.css
+++ b/index.css
@@ -186,8 +186,10 @@ body {
 	min-height: 100%;
 }
 .products__image--img {
+	width: 300px;
 	max-width: 300px;
-	min-height: 100%;
+	height: 358px;
+	padding-top: 20px;
 }
 .products__title {
 	width: 550px;
@@ -270,8 +272,10 @@ body {
 .footer__viber {
 	display: block;
 	margin: 0 auto;
+	width: 48px;
+	height: 48px;
 }
-.inox_cristal_rd {
+.footer__btn-up {
 	position: fixed;
 	bottom: 10px;
 	right: 10px;
@@ -289,7 +293,7 @@ body {
 	padding: 0px;
 	text-decoration: none;
 }
-.inox_cristal_rd_:before {
+.footer__btn-up:before {
 	content: ".";
 	color: transparent;
 	line-height: 24px;
