--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -5,10 +5,6 @@
 	}
 }
 @media (min-width: 2560px) {
-	.header {
-		padding-left: 200px;
-		padding-right: 200px;
-	}
 	html {
 		font-size: 25px;
 	}
@@ -37,9 +33,8 @@
 		max-width: 3000px;
 		width: 100%;
 	}
-	.main__image {
-		max-width: 780px;
-		max-height: 525px;
+	.main__imageconteiner--text-title {
+		margin-bottom: 20px;
 	}
 	.products__image--img {
 		max-width: 345px;
