--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap&rel=preconnect");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap&rel=preconnect");
 /* ------COMMON---------  */
 body {
 	font-family: "Nunito", sans-serif;
@@ -30,7 +32,7 @@ body {
 }
 .header__container {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	padding: 0.8rem 0.9rem 0 0.9rem;
 }
@@ -79,6 +81,9 @@ body {
 	text-decoration: none;
 	color: #ffffff;
 }
+.header__menu-link:hover {
+	box-shadow: 0 0 10px rgba(237, 70, 32, 0.981);
+}
 .header__menu,
 .header__phone--box {
 	margin-top: 40px;
@@ -95,9 +100,9 @@ body {
 }
 .main__image {
 	width: 50vw;
-	height: 100%;
+	height: 455px;
 	max-width: 683px;
-	max-height: 460px;
+	max-height: 455px;
 	-webkit-filter: blur(2px);
 	-moz-filter: blur(2px);
 	-o-filter: blur(2px);
@@ -116,18 +121,17 @@ body {
 	animation: anime infinite 5s linear;
 	font-size: 2.6rem;
 	line-height: 0.75;
-	font-weight: 700;
 	padding-left: 40px;
 }
 @keyframes anime {
 	0% {
-		color: orange;
+		color: rgb(255, 153, 0);
 	}
 	33% {
 		color: rgb(255, 102, 0);
 	}
 	66% {
-		color: rgb(255, 145, 0);
+		color: rgb(255, 60, 0);
 	}
 	100% {
 		color: rgb(255, 81, 0);
@@ -155,15 +159,15 @@ body {
 .products__fuel--img {
 	width: 90px;
 	height: 90px;
-
 	border-radius: 50%;
 }
 .products__fuel--box {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	min-width: 120px;
 }
-.products__fuel--box:not(:last-child) {
+.products__fuel--box {
 	margin-left: 30px;
 }
 .products__towrap {
@@ -233,6 +237,7 @@ body {
 	padding: 10px;
 	font-size: 1.4rem;
 	line-height: 1.3;
+	text-align: justify;
 }
 
 /* FOOTER */
@@ -261,8 +266,8 @@ body {
 	color: #ffffff;
 	font-size: 1.5rem;
 }
-.footer__menu-item {
-	margin-right: 2rem;
+.footer__menu-link:hover {
+	box-shadow: 0 0 10px rgba(237, 155, 32, 0.981);
 }
 .footer__maps-title {
 	color: #ffffff;
