--- a/contacts/contacts.css
+++ b/contacts/contacts.css
@@ -39,9 +39,9 @@ a {
 	display: flex;
 	align-self: flex-end;
 	max-width: 200px;
-
 	background-color: #dcaeb1;
 	border-radius: 20px;
+	margin-right: 15px;
 	padding: 10px;
 	font-size: 1.1rem;
 	color: #0f6070;
