--- a/index.css
+++ b/index.css
@@ -70,6 +70,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	margin-left: 0.5rem;
+	gap: 3px;
 	color: #ffffff;
 }
 .header__phone--link {
@@ -225,6 +226,9 @@ body {
 .products__price {
 	text-decoration: underline;
 	font-size: 1.3rem;
+	-webkit-box-shadow: #fff 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px,
+		5px 5px 15px 5px rgba(0, 0, 0, 0);
+	box-shadow: #fff 0 1px 4px, #ff0 0 2px 10px, #ff8000 0 10px 20px, red 0 18px 40px, 5px 5px 15px 5px rgba(0, 0, 0, 0);
 }
 
 /* ---------PRODUCTS TEXT---------- */
